
2012-06-03		Gaucheブランチをmasterに
2012-06-03		Gauche で動くことを第一に考え、R5RS非準拠でも便利機能を使うのを躊躇わない方向で走るブランチ Gauche を新設。手元の Gauche のバージョンが 0.9.3.3 なので、0.9.3.3 で動くことを正義とする。